--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "daisyui": "^4.6.1",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "react": "^18",
